# CNCBI_ECL_UI

./: AUDIT_TRIAL_README.md  README.md  email_response_nginx_permission.txt  index.html  nginx_permission_analysis.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
EY_working/ECL_Engine/: pyproject.toml  readme.md
EY_working/ECL_Engine/app/: backend_server.py
EY_working/ECL_Engine/src/: .gitignore  main.py  run_config_file.json  run_config_file_20250714182053.json
EY_working/ECL_Engine/src/config/: env_setting.py
EY_working/ECL_Engine/src/modules/ecl_calculator/: discounting_factor.py  ead_layer_1.py  ead_layer_2.py  ead_layer_3.py  ead_off_bal.py  ecl_calculation.py  lgd_calculation.py
EY_working/ECL_Engine/src/modules/io_handler/: _expected_life.py  _stage_allocation.py  data_preprocessor.py  output_handler.py  output_handler_ref.py  parameter_loader.py
EY_working/ECL_Engine/src/modules/scenario_engine/: collateral_allocation.py  pd_assignment.py
EY_working/ECL_Engine/src/modules/validation/: post_run_validator.py  pre_run_sanity_check.py
EY_working/ECL_Engine/src/services/: ecl_adjustment_service.py  ecl_engine_service.py  pre_run_sanity_check_service.py
EY_working/ECL_Engine/src/utils/: data_transfer.py  write_my_csv.py
backend/: flaskapp.service  main_batch.py
backend/ECL_Engine/: main_batch.py  main_ui.py  run_config_file.json
backend/ecl_engine_dev/: batch_calendar.txt  main_batch.py  main_ui.py  (+6 more)
frontend_nginx/: fastcgi.conf  nginx.conf
pyscripts/: backend_server.py  requirements.txt  test_ldap.py
src/: App.vue  main.ts
(+135 files in other folders)
