[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cncbi-ecl-engine"
version = "0.1.0"
description = "CNCBI ECL Engine for Expected Credit Loss calculations"
readme = "readme.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
    { name = "CNCBI Team" }
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",  # For Excel file support
    "python-dateutil>=2.8.0",  # For date handling
    "pathlib>=1.0.1",  # For path handling
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q" 